$Id$

****************************** DRUPAL 5 BRANCH ********************************

October 20, 2008
---------------
#323631 by Morbus: Style fixes for blue_lagoon. Removed need for background image.
#323632 by Michelle: Removed member ID from naked & blue_lagoon templates as requested by Morbus.
#323656 by Michelle: Removed override that set table row borders to 0.
#319942 by Michelle: Thanks to Morbus for pointing out that Drupal code comes with a clearer. Changed over to using it.
NOISSUE by Michelle: Small fixes to all styles based partially on Morbus' patch from #323631
#323653 by Michelle: Set a minimum height for the author pane. Also some other minor fixes.
#321590 by Morbus: Gets rid of div when forum description is empty.
#317061 by Michelle: Fixed missing templates when used with Zen subthemes.

October 17, 2008
---------------
#321041 by derhasi, swill, Michelle: Fixed errors in Mark as Read functionality.
#322125 by swill: Fixed bug with comment link array recreation.

October 8, 2008
---------------
#316543 by neclimdul: Fixed obscure bug where search_preprocess was getting called and inadvertantly calling the porter stemmer module.
NOISSUE by Michelle: Noticed when I installed the alpha on my live site that anonymous users showed up wierd. This fixes them up. (STYLE CHANGES: advf-author-pane.tpl.php in all styles.)
#318371 by Michelle: Changed class forum-topics in advf-forum-list.tpl.php to forum-num-topics to avoid conflict with table name on topic listing page. (STYLE CHANGES: advf-forum-list.tpl.php in all styles)

October 7, 2008
---------------
#291084 by Michelle: Removed all collapsable container code as it caused too many issues. Many thanks to jmorahan for tracing the bizarre pagers to this code.
#316525 by CompShack, samuelet: Minor CSS fixes to forum posts to fix IE 7 issues.
#318303 by Michelle, waawaamilk: Added static variable to avoid making multiple trips to the cache per page.

October 5, 2008
---------------