@@ -114,6 +114,14 @@ floats. For colors and borders, see advanced_forum.css.
   padding-top: 10px;
 }
 
+/*** FORUM STATISTICS *********************************************************/
+
+#forum-statistics-header,
+.forum-statistics-sub-header,
+.forum-statistics-sub-body {
+  padding: 0.3em 0.5em;
+}
+
 /*** FORUM THREADS ***********************************************************/
 
 .forum-post-header .forum-links {
