@@ -2,6 +2,10 @@ $Id$
 
 ****************************** DRUPAL 5 BRANCH ********************************
 
+October 22, 2008
+---------------
+#266682 by Morbus, Michelle: Added forum statistics. Also a few minor fixes and extra docs that slipped in at the same time.
+
 October 20, 2008
 ---------------
 #323631 by Morbus: Style fixes for blue_lagoon. Removed need for background image.
@@ -35,7 +39,7 @@ October 5, 2008
 #317276 by Michelle, Edlund: Fixed issues with private message module.
 #317174 by Michelle: Moved CSS/JS calls out of menu code except for main forum pages to avoid conflicts with other theme changing modules.
 
-October 1, 2008
+October 1, 2008 -- ALPHA 12
 ---------------
 #314205 by Michelle: More style cleanup.
 NOISSUE by Michelle: Code cleanup.
